styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html, body {
  height: 100%;
}
body {
  display: grid;
  place-items: center;
  background: hsl(210, 46%, 95%);
  font-size: 13px;
  color: white;
  font-family: 'Barlow Semi Condensed', sans-serif ;
}

svg {
  position: absolute;
  right: 15%;
}

.v-graduate {
  opacity: 0.5;
}

img {
  max-height: 80%;
  border-radius: 50%;
}

.container {
  max-width: 1440px;
  margin: 20px auto;
  padding: 10px auto;
}

.flex-1 {
  display: flex;
  gap: 20px;
  margin: 10px;
  align-items: center;
}


.card {
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  background: hsl(0, 0%, 100%);
  overflow: hidden;
}
.card:first-of-type {
  background: hsl(263, 55%, 52%);
  grid-column: 1 / span 2;
  position: relative;
}
.card:nth-of-type(2) {
  background: hsl(217, 19%, 35%);
  grid-column: 3 / 4;
}
.card:nth-of-type(3) {
  grid-column: 1 / 2;
  color: hsl(219, 29%, 14%);
}
.card:nth-of-type(4) {
  background: hsl(219, 29%, 14%);
  grid-column: 2 / span 2;
}
.card:last-of-type{
  grid-row: 1 / span 2;
  grid-column: 4 / 5;
  color: hsl(219, 29%, 14%);
}

.card-item {
  padding: 5px 20px;
}

.hero {
  font-size: 1.2rem;
  font-weight: 600;
  margin-bottom: 20px;
}

.quote {
  opacity: 0.7;
}

.grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: minmax(200px, 1fr) minmax(200px, 1fr);
  gap: 25px;
  width: 90%;
  justify-content: center;
  
}

@media (max-width: 768px) {
  .grid {
    display: block;
  }

  .card {
    margin: 20px auto;
  }
}

